{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1545,
  "lineage": "3a523754-2c43-9f63-7ae0-1684d9dec278",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d2a8190b1bdeb4",
            "arn": "arn:aws:ec2:us-east-2:975050283031:instance/i-016590bd12cb903aa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-payjack-us-east-2-admin-profile",
            "id": "i-016590bd12cb903aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa78db1e02f87549",
            "private_dns": "ip-10-0-10-40.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000f5eb1a8cdbb2bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05376625a4037ab96"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040b8dab029145a78",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-admin-server",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-admin-server",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05376625a4037ab96"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_groups"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "module.compute.data.aws_ami.ubuntu",
            "module.compute.data.aws_iam_instance_profile.admin_profile",
            "module.compute.data.aws_ssm_parameter.admin_sg_id",
            "module.compute.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.iam.aws_iam_instance_profile.admin_profile",
            "module.iam.aws_iam_role.admin_role",
            "module.iam.aws_iam_role_policy_attachment.admin_managed_ssm",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-payjack-us-east-2-alb-logs-bucket",
                "enabled": true,
                "prefix": "dev"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050283031:loadbalancer/app/dev-payjack-us-east-2-alb/3ecaf6d34899b3a7",
            "arn_suffix": "app/dev-payjack-us-east-2-alb/3ecaf6d34899b3a7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-payjack-us-east-2-alb-231127469.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050283031:loadbalancer/app/dev-payjack-us-east-2-alb/3ecaf6d34899b3a7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-payjack-us-east-2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e8bc5a9ad01314a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0039aa7acfe132049"
              },
              {
                "subnet_id": "subnet-0959815156bfbe293"
              },
              {
                "subnet_id": "subnet-0ffd420295d8a7862"
              }
            ],
            "subnets": [
              "subnet-0039aa7acfe132049",
              "subnet-0959815156bfbe293",
              "subnet-0ffd420295d8a7862"
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-alb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-alb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc_id": "vpc-03ad51840c66d2b86",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnets"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "security_groups"
              }
            ]
          ],
          "dependencies": [
            "module.load_balancer.data.aws_s3_bucket.alb_logs",
            "module.load_balancer.data.aws_ssm_parameter.alb_sg_id",
            "module.load_balancer.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id",
            "module.storage.aws_s3_bucket.alb_logs",
            "module.storage.aws_s3_bucket_logging.alb_logs",
            "module.storage.aws_s3_bucket_notification.alb_logs",
            "module.storage.aws_s3_bucket_policy.alb_logs",
            "module.storage.aws_s3_bucket_public_access_block.alb_logs",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.alb_logs",
            "module.storage.aws_s3_bucket_versioning.alb_logs",
            "module.storage.aws_ssm_parameter.alb_logs_bucket_name",
            "module.storage.data.aws_elb_service_account.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050283031:targetgroup/dev-payjack-us-east-2-tg/393c2cb1bd1dc984",
            "arn_suffix": "targetgroup/dev-payjack-us-east-2-tg/393c2cb1bd1dc984",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050283031:targetgroup/dev-payjack-us-east-2-tg/393c2cb1bd1dc984",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-payjack-us-east-2-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-tg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-tg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.load_balancer.data.aws_ssm_parameter.vpc_id",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id",
            "module.storage.aws_s3_bucket.alb_logs",
            "module.storage.aws_s3_bucket_logging.alb_logs",
            "module.storage.aws_s3_bucket_notification.alb_logs",
            "module.storage.aws_s3_bucket_policy.alb_logs",
            "module.storage.aws_s3_bucket_public_access_block.alb_logs",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.alb_logs",
            "module.storage.aws_s3_bucket_versioning.alb_logs",
            "module.storage.aws_ssm_parameter.alb_logs_bucket_name",
            "module.storage.data.aws_elb_service_account.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06915106147a4e218",
            "arn": "arn:aws:ec2:us-east-2:975050283031:elastic-ip/eipalloc-06915106147a4e218",
            "domain": "vpc",
            "id": "eipalloc-06915106147a4e218",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-22-100.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.22.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-nat-eip",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-nat-eip",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:internet-gateway/igw-0b255135dd4f7230c",
            "id": "igw-0b255135dd4f7230c",
            "owner_id": "975050283031",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-igw",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-igw",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06915106147a4e218",
            "association_id": "eipassoc-01219b965d99d3880",
            "connectivity_type": "public",
            "id": "nat-0570d1bb8f3f9359c",
            "network_interface_id": "eni-0d847694ea895ad7c",
            "private_ip": "10.0.0.113",
            "public_ip": "3.130.22.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ffd420295d8a7862",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-nat-gateway",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-nat-gateway",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:route-table/rtb-0718c7c7e291e1b05",
            "id": "rtb-0718c7c7e291e1b05",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0570d1bb8f3f9359c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:route-table/rtb-03135ce3544c7e77b",
            "id": "rtb-03135ce3544c7e77b",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b255135dd4f7230c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdbafc115a3f6c9c",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-040b8dab029145a78"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078c7121208ce09ed",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-0130d175268d632cc"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06517f259f7d45dbc",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-089adb67a34358151"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6731ccd33a6c4ad",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-04fde9e24b47dedf6"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d0661407b970b1",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-0a1c8e7f8ac7b1f20"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013faa5691d0df8b2",
            "route_table_id": "rtb-0718c7c7e291e1b05",
            "subnet_id": "subnet-019a993e168460ef7"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b670c4fb7be5411",
            "route_table_id": "rtb-03135ce3544c7e77b",
            "subnet_id": "subnet-0ffd420295d8a7862"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b94f4a448bf3e77",
            "route_table_id": "rtb-03135ce3544c7e77b",
            "subnet_id": "subnet-0959815156bfbe293"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b926a8e1a854926",
            "route_table_id": "rtb-03135ce3544c7e77b",
            "subnet_id": "subnet-0039aa7acfe132049"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-040b8dab029145a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040b8dab029145a78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-0130d175268d632cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0130d175268d632cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-089adb67a34358151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089adb67a34358151",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-app-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-04fde9e24b47dedf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fde9e24b47dedf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-0a1c8e7f8ac7b1f20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c8e7f8ac7b1f20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-019a993e168460ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019a993e168460ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-private-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-0ffd420295d8a7862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffd420295d8a7862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-0959815156bfbe293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0959815156bfbe293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:subnet/subnet-0039aa7acfe132049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039aa7acfe132049",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-public-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:vpc/vpc-03ad51840c66d2b86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033e22d5fc4cd98cf",
            "default_route_table_id": "rtb-0534106872a92a1df",
            "default_security_group_id": "sg-0e28cb2eb4200e22f",
            "dhcp_options_id": "dopt-0e051d47ed56c77ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ad51840c66d2b86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0534106872a92a1df",
            "owner_id": "975050283031",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-vpc",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-vpc",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-05376625a4037ab96",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05376625a4037ab96",
            "ingress": [],
            "name": "dev-payjack-us-east-2-admin-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-05e8bc5a9ad01314a",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e8bc5a9ad01314a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic to ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-payjack-us-east-2-alb-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-alb-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-alb-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-00b8449968a03bad8",
            "description": "Security group for ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b8449968a03bad8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "dev-payjack-us-east-2-asg-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-asg-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-asg-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-09b4776b52924517a",
            "description": "Security group for ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4776b52924517a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from anywhere",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dev-payjack-us-east-2-elasticache-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-elasticache-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-elasticache-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-00f6e70ef4db82d10",
            "description": "Security group for Kafka",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f6e70ef4db82d10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from anywhere",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "dev-payjack-us-east-2-kafka-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-kafka-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-kafka-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050283031:security-group/sg-0a5f3e01428cc1659",
            "description": "Allow MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5f3e01428cc1659",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-payjack-us-east-2-rds-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-rds-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "dev-payjack-us-east-2-rds-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad51840c66d2b86"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app_private",
            "module.networking.aws_route_table_association.db_private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app_private",
            "module.networking.aws_subnet.db_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.app_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.db_private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}